<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.meession.etm</groupId>
    <artifactId>mitedtsm</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <modules>
        <module>mitedtsm-dependencies</module>
        <module>mitedtsm-framework</module>
        <!-- Server 主项目 -->
        <module>mitedtsm-server</module>
        <!-- 各种 module 拓展 -->
        <module>mitedtsm-module-system</module>
        <module>mitedtsm-module-infra</module>
        <module>mitedtsm-module-member</module>
        <module>mitedtsm-module-bpm</module>
        <module>mitedtsm-module-report</module>
        <module>mitedtsm-module-mp</module>
        <module>mitedtsm-module-pay</module>
        <module>mitedtsm-module-mall</module>
        <module>mitedtsm-module-crm</module>
        <module>mitedtsm-module-erp</module>
        <module>mitedtsm-module-ai</module>
        <module>mitedtsm-module-iot</module>
    </modules>

    <name>${project.artifactId}</name>
    <description>mitedtsm 项目基础脚手架</description>
    <url>https://github.com/meession/mitedtsm</url>

    <properties>
        <revision>2026.01-SNAPSHOT</revision>
        <!-- Maven 相关 -->
        <java.version>17</java.version>
        <maven.compiler.source>${java.version}</maven.compiler.source>
        <maven.compiler.target>${java.version}</maven.compiler.target>
        <maven-surefire-plugin.version>3.5.3</maven-surefire-plugin.version>
        <maven-compiler-plugin.version>3.14.0</maven-compiler-plugin.version>
        <flatten-maven-plugin.version>1.7.2</flatten-maven-plugin.version>
        <!-- maven-surefire-plugin 暂时无法通过 bom 的依赖读取（兼容老版本 IDEA 2024 及以前版本） -->
        <lombok.version>1.18.42</lombok.version>
        <spring.boot.version>3.5.9</spring.boot.version>
        <mapstruct.version>1.6.3</mapstruct.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Mockito inline mock maker appends to the bootstrap class path. Disable CDS for
             test JVMs so that the JDK does not emit a misleading sharing warning. -->
        <argLine>-Xshare:off</argLine>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.meession.etm</groupId>
                <artifactId>mitedtsm-dependencies</artifactId>
                <version>${revision}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- Override malformed legacy transitive POMs that make Maven 3.9 emit
                 effective-model warnings during every reactor and test build. -->
            <dependency>
                <groupId>org.javassist</groupId>
                <artifactId>javassist</artifactId>
                <version>3.30.2-GA</version>
            </dependency>
            <dependency>
                <groupId>org.apache.yetus</groupId>
                <artifactId>audience-annotations</artifactId>
                <version>0.15.0</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <!-- maven-surefire-plugin 插件，用于运行单元测试。 -->
                <!-- 注意，需要使用 3.0.X+，因为要支持 Junit 5 版本 -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${maven-surefire-plugin.version}</version>
                    <configuration>
                        <!-- Credential-backed/manual suites are integration tests and are
                             deliberately outside the deterministic unit-test lifecycle. -->
                        <excludes>
                            <exclude>**/*IntegrationTest.java</exclude>
                            <exclude>**/FtpFileClientTest.java</exclude>
                            <exclude>**/LocalFileClientTest.java</exclude>
                            <exclude>**/S3FileClientTest.java</exclude>
                            <exclude>**/SftpFileClientTest.java</exclude>
                            <exclude>**/CodegenEngineVue2Test.java</exclude>
                            <exclude>**/CodegenEngineVue3Test.java</exclude>
                            <exclude>**/BpmTaskCandidateExpressionStrategyTest.java</exclude>
                            <exclude>**/BpmTaskCandidateGroupStrategyTest.java</exclude>
                            <exclude>**/BpmTaskCandidatePostStrategyTest.java</exclude>
                            <exclude>**/BpmTaskCandidateRoleStrategyTest.java</exclude>
                            <exclude>**/BpmTaskCandidateUserStrategyTest.java</exclude>
                            <exclude>**/PayAppServiceTest.java</exclude>
                            <exclude>**/PayNotifyServiceTest.java</exclude>
                        </excludes>
                    </configuration>
                </plugin>
                <!-- maven-compiler-plugin 插件，解决 spring-boot-configuration-processor + Lombok + MapStruct 组合 -->
                <!-- https://stackoverflow.com/questions/33483697/re-run-spring-boot-configuration-annotation-processor-to-update-generated-metada -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>${maven-compiler-plugin.version}</version>
                    <configuration>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>org.springframework.boot</groupId>
                                <artifactId>spring-boot-configuration-processor</artifactId>
                                <version>${spring.boot.version}</version>
                            </path>
                            <path>
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok</artifactId>
                                <version>${lombok.version}</version>
                            </path>
                            <path>
                                <!-- 确保 Lombok 生成的 getter/setter 方法能被 MapStruct 正确识别，
                                     避免出现 No property named “xxx" exists 的编译错误 -->
                                <groupId>org.projectlombok</groupId>
                                <artifactId>lombok-mapstruct-binding</artifactId>
                                <version>0.2.0</version>
                            </path>
                            <path>
                                <groupId>org.mapstruct</groupId>
                                <artifactId>mapstruct-processor</artifactId>
                                <version>${mapstruct.version}</version>
                            </path>
                        </annotationProcessorPaths>
                        <!-- 编译参数写在 arg 内，解决 Spring Boot 3.2 的 Parameter Name Discovery 问题 -->
                        <debug>false</debug>
                        <compilerArgs>
                            <arg>-parameters</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
                <plugin>
                    <groupId>org.codehaus.mojo</groupId>
                    <artifactId>flatten-maven-plugin</artifactId>
                </plugin>
            </plugins>
        </pluginManagement>

        <plugins>
            <!-- 统一 revision 版本 -->
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>flatten-maven-plugin</artifactId>
                <version>${flatten-maven-plugin.version}</version>
                <configuration>
                    <flattenMode>oss</flattenMode>
                    <updatePomFile>true</updatePomFile>
                </configuration>
                <executions>
                    <execution>
                        <goals>
                            <goal>flatten</goal>
                        </goals>
                        <id>flatten</id>
                        <phase>process-resources</phase>
                    </execution>
                    <execution>
                        <goals>
                            <goal>clean</goal>
                        </goals>
                        <id>flatten.clean</id>
                        <phase>clean</phase>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>

    <!-- 使用 huawei / aliyun 的 Maven 源，提升下载速度 -->
    <repositories>
        <repository>
            <id>huaweicloud</id>
            <name>huawei</name>
            <url>https://mirrors.huaweicloud.com/repository/maven/</url>
        </repository>
        <repository>
            <id>aliyunmaven</id>
            <name>aliyun</name>
            <url>https://maven.aliyun.com/repository/public</url>
        </repository>

        <repository>
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
        <repository>
            <id>spring-snapshots</id>
            <name>Spring Snapshots</name>
            <url>https://repo.spring.io/snapshot</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
    </repositories>

</project>
